# rna_map_nextflow

./: .cursorrules  .gitignore  CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  NEXTFLOW_UPDATE_SUMMARY.md  NEXTFLOW_VALIDATION_RESULTS.md  OPTIMIZATION_MOVED_SUMMARY.txt  QUICKSTART.md  README.md  RESTRUCTURE_SUMMARY.md  WARNINGS_EXPLANATION.md  WARNINGS_FIXED_SUMMARY.md  WARNINGS_QUICK_SUMMARY.md  environment.yml  environment_optuna.yml  fmt.sh  lint.sh  main.nf  nextflow.config  pyproject.toml  test_cluster_job.sh  test_cluster_job_local.sh  test_cluster_job_singularity.sh  test_dag.html  test_dag_parallel.html  test_report.html  test_report_parallel.html  test_trace.txt  test_trace_parallel.txt
.github/workflows/: ci.yml
conf/: base.config  custom_example.config  local.config  slurm.config  slurm_hybrid.config  slurm_local.config  slurm_local_singularity.config  slurm_optimized.config  slurm_singularity.config
containers/: Dockerfile  Singularity.def
cpp/: .gitignore  CMakeLists.txt  README.md  build.sh  setup.py
cpp/include/: bit_vector_generator.hpp
cpp/src/: bindings.cpp  bit_vector_generator.cpp
docker/: Dockerfile
docs/: BITVECTOR_STORAGE.md  BOWTIE2_OPTIMIZATION.md  BOWTIE2_OPTIONS.md  BOWTIE2_USAGE.md  CIGAR_COMPARISON_SUMMARY.md  CIGAR_FIXES_IMPACT_ON_RESULTS.md  CLEANUP_COMPLETE_SUMMARY.md  CLEANUP_SUMMARY_VISUAL.md  CLEAR_IDE_CACHE.md  CLUSTER_OPTIMIZATION_STRATEGIES.md  CLUSTER_TESTING_GUIDE.md  CLUSTER_TESTING_QUICKREF.md  CONTAINER_USAGE.md  CPP_IMPLEMENTATION.md  DOCUMENTATION_CLEANUP.md  EXECUTOR_OPTIMIZATION.md  FILE_MANAGEMENT_STRATEGIES.md  FINAL_CLEANUP_STATUS.md  FULL_CLEANUP_SUMMARY.md  IMPLEMENTATION_PERFORMANCE.md  MUTATION_PRESETS_SUMMARY.md  MUTATION_TRACKING_GUIDE.md  NEXTFLOW_LINTING.md  NEXTFLOW_RESTRUCTURE_PLAN.md  OPTIMIZATION_CONSOLIDATION_COMPLETE.md  OPTIMIZATION_CONSOLIDATION_PLAN.md  OPTIMIZATION_CONSOLIDATION_SUMMARY.md  PIPELINE_GUIDE.md  PYSAM_SUPPORT.md  QUICKSTART.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_PLAN.md  REFACTORING_TESTING.md  REPO_CLEANUP_PLAN.md  RESOURCE_OPTIMIZATION.md  SETUP.md  SETUP_NEXTFLOW_LINTING.md  STORAGE_FORMAT_PERFORMANCE.md  TESTING_CHECKLIST.md  (+2 more)
docs/archive/: ALL_IMPLEMENTATIONS_VALIDATION.md  CASE2_COMPARISON_RESULTS.md  CIGAR_PARSING_CPP_VS_PYTHON.md  CIGAR_PARSING_FIXES.md  CLUSTER_IMPROVEMENTS.md  IMPLEMENTATION_COMPARISON_RESULTS.md  NEXTFLOW_IMPROVEMENTS.md  NEXTFLOW_MIGRATION_GUIDE.md  QUEUE_OPTIMIZATION_GUIDE.md  QUICK_EXECUTOR_GUIDE.md  TESTING_INDEX.md  WORKFLOW_REVIEW_AND_RECOMMENDATIONS.md
docs/optimization/: MULTIPLE_SEQUENCES_PARAMETERS.md  README.md  TOP_100_PARAMETER_ANALYSIS.md
modules/: bowtie2_align.nf  fastqc.nf  join_bit_vectors.nf  join_mutation_histos.nf  join_sam.nf  rna_map_bit_vectors.nf  split_fastq.nf  trim_galore.nf  workflow_stats.nf
nextflow/: .gitattributes  .gitignore  README.md  environment.yml  fmt.sh  lint.sh  nextflow.config  setup_conda.sh  test_local.sh  test_local_conda.sh  test_local_simple.sh  test_parallel.sh
nextflow/modules/: bowtie2_build.nf  join_mutation_histos.nf  join_sam.nf  rna_map_bit_vectors.nf  trim_galore.nf
nextflow/workflows/: mapping.nf
optimization/: README.md
optimization/config/: slurm_optimized.config
optimization/docs/: BEST_PARAMETERS.md
optimization/scripts/: BUILD_ON_CLUSTER.md  COLIMA_SETUP.md  Dockerfile  README.md  USE_CONTAINER.md  collect_all_results.sh  collect_top_results.py  convert_docker_to_apptainer.sh  optimize_bowtie2_params.py  run_baseline_test.py  transfer_build_files.sh  validate_data_structure.sh
python/: pyproject.toml  requirements.txt
python/tests/: README.md  conftest.py  test_all_implementations_comparison.py  test_bit_vector.py  test_bit_vector_cpp.py  test_cigar_parsing.py  test_config.py  test_detailed_implementation_comparison.py  test_external_cmd.py  test_logging.py  test_mutation_histogram.py  test_results.py  test_run.py  test_sam.py  test_storage_format_performance.py
rna_map/: __init__.py  bit_vector.py  cli.py  cli_opts.py  cli_pipeline.py  external_cmd.py  parameters.py  sam.py  util.py
rna_map/analysis/: bit_vector_iterator.py  mutation_histogram.py
rna_map/cli/: __init__.py  bowtie2.py  nextflow_wrapper.py  parser.py  pipeline.py
rna_map/core/: __init__.py  aligned_read.py  config.py  inputs.py
rna_map/io/: __init__.py  fastq.py  sam.py  validation.py
rna_map/pipeline/: bit_vector_generator.py  functions.py  simple_pipeline.py
rna_map/tools/: __init__.py  convert_bitvector_storage.py
rna_map/visualization/: __init__.py  plots.py  utils.py
scripts/: analyze_top_parameters.py  build_singularity.sh  optimize_bowtie2_params.py  optimize_bowtie2_params_optuna.py  update_lib_imports.py
scripts/optimization/: BUILD_AND_TRANSFER.md  CONTAINER_USAGE.md  Dockerfile  README.md  build_optimization_container.sh  build_with_docker.sh  cluster_optimization_config.yml  (+3 more)
src/rna_map/: .gitignore  mutation_histogram.py  pyproject.toml
src/rna_map/analysis/: bit_vector_iterator.py
src/rna_map/core/: __init__.py  config.py
src/rna_map/io/: csv.py  validation.py
src/rna_map/pipeline/: _cpp_bit_vectors.py  functions.py
src/rna_map/resources/: bowtie2_presets.yml
src/rna_map/visualization/: __init__.py
test/: CIGAR_PARSING_VERIFICATION.md  compare_outputs.py  compare_pipeline_outputs.py  detailed_comparison.json  generate_and_compare.py  implementation_comparison.json  storage_format_performance.json  storage_format_performance_case_2.json  test_all_implementations_comparison.py  test_bit_vector.py  test_bit_vector_cpp.py  test_bowtie2_presets.py  test_cigar_parsing.py  test_cli_parser.py  test_cli_pipeline.py  test_dask_pipeline.py  test_detailed_implementation_comparison.py  test_external_cmd.py  test_functional_api.py  test_integration.py  test_mapping.py  test_mutation_histogram.py  test_mutation_presets.py  test_orchestrator_functional.py  test_pipeline_integration.py  test_pipeline_integration_comparison.py  test_results.py  test_run.py  test_sam.py  test_simple_pipeline.py  test_storage_format_performance.py
workflows/: mapping.nf  parallel_mapping.nf
(+179 files in other folders)
